# BookShop

./: .gitignore  BookShopPro.pro  CMakeLists.txt  README.md
Files/: example.xlsx
examples/: example.xlsx  new.txt
include/: bookshop.h  mainwin.h
src/: bookshop.cpp  main.cpp  mainwin.cpp
